# DawnSimulator

./: .gitignore  AlarmClock.ino  Button.cpp  Button.h  DawnSimulator.ino  GUI.cpp  Lcd.h  Lcd_I2C.cpp  Lcd_I2C.h  LedStripMgr.cpp  LedStripMgr.h  LightComponent.cpp  LightComponent.h  LightComposite.cpp  LightComposite.h  LightProfile.cpp  LightProfile.h  LightState.cpp  LightState.h  README.md  SimpleAlarmClock.cpp  platformio.ini
lib/LightComposite/src/: LightComposite.cpp  LightComposite.h
lib/LightProfile/src/: LightProfile.cpp  LightProfile.h
lib/utils/: utils.h
src/: Button.cpp  GUI.cpp  GUI.h  LVGlue.cpp  LVGlue.h  Lcd_I2C.h  LedStripMgr.cpp  LedStripMgr.h  SimpleAlarmClock.cpp  SimpleAlarmClock.h  arrow_blue_img.c  arrow_yellow_img.c  main.cpp  stars_img.c  sun_img.c
src_external/TFT_eSPI/: User_Setup.h
src_external/lvgl/: lv_conf.h
test/: CMakeLists.txt  LcdTests.cpp  LightProfileTests.cpp  gtestMain.cpp  stubMain.cpp
test/test_common/: test_light_composite.cpp
test/test_desktop/: test_light_composite.cpp  test_utils.cpp  test_utils.h
test/test_embedded/: test_light_composite.cpp
test_external/: CMakeLists.txt  LcdTests.cpp  LightProfileTests.cpp  stubMain.cpp
